k8s/fap-log-viewer/base/frontend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: fap-log-viewer
spec:
  redirectScheme:
    scheme: https
    permanent: true
