k8s/fap-log-viewer/base/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: fap-log-viewer
spec:
  selector:
    app: frontend
  ports:
    - port: 4321
      targetPort: 4321
  type: ClusterIP
