k8s/fap-log-viewer/base/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fap-ingress
  namespace: fap-log-viewer
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  rules:
    - host: fap.miloszk.pl
      http:
        paths:
          - backend:
              service:
                name: frontend
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - fap.miloszk.pl
      secretName: fap-tls
